--- a/Aplikacija/app/build.gradle
+++ b/Aplikacija/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    //implementation 'org.mongodb:mongo-java-driver:3.12.0'
+    implementation 'org.mongodb:mongodb-driver-sync:4.4.1'
 }
