--- a/Aplikacija/app/build.gradle
+++ b/Aplikacija/app/build.gradle
@@ -52,5 +52,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'io.realm.kotlin:library-sync:1.6.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    // Coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha05"
+    // OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
 }
