--- a/Aplikacija/app/build.gradle
+++ b/Aplikacija/app/build.gradle
@@ -66,5 +66,14 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'*/
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha04"
+    implementation "androidx.camera:camera-core:1.1.0-alpha04"
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha04"
+    implementation "androidx.camera:camera-view:1.2.0-alpha01"
+    def camerax_version = "1.1.0-alpha03"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:1.0.0-alpha22"
 
 }
