--- a/Aplikacija/app/src/main/AndroidManifest.xml
+++ b/Aplikacija/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -6,11 +5,13 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission  android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.camera.any" />
+
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/car"
         android:label="@string/app_name"
         android:roundIcon="@drawable/car"
@@ -18,21 +19,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AplikacijaProjekt"
         tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         >
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="sensorPortrait">
         </activity>
         <activity
             android:name=".InfoActivity"
@@ -42,8 +42,11 @@
             android:name=".MapActivity"
             android:screenOrientation="sensorPortrait">
         </activity>
+        <activity
+            android:name=".PhotoActivity"
+            android:screenOrientation="sensorPortrait">
+        </activity>
 
     </application>
-
 
 </manifest>
