--- a/Aplikacija/app/build.gradle
+++ b/Aplikacija/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'feri.aplikacijaprojekt'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "feri.aplikacijaprojekt"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -35,6 +35,8 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -66,14 +68,28 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'*/
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha04"
-    implementation "androidx.camera:camera-core:1.1.0-alpha04"
-    implementation "androidx.camera:camera-camera2:1.1.0-alpha04"
+
+
+    //implementation "androidx.camera:camera-lifecycle:1.1.0-alpha04"
+    //implementation "androidx.camera:camera-core:1.1.0-alpha04"
+    //implementation "androidx.camera:camera-camera2:1.1.0-alpha04"
     implementation "androidx.camera:camera-view:1.2.0-alpha01"
-    def camerax_version = "1.1.0-alpha03"
+    /*def camerax_version = "1.1.0-alpha03"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
     implementation "androidx.camera:camera-view:1.0.0-alpha22"
+    implementation "androidx.camera:camera-camera2:1.0.0"*/
+
+    // CameraX core library
+    implementation "androidx.camera:camera-core:1.2.0"
+
+// CameraX camera implementation
+    implementation "androidx.camera:camera-camera2:1.2.0"
+
+// CameraX lifecycle dependencies
+    implementation "androidx.camera:camera-lifecycle:1.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
 }
