--- a/Website/backend/package.json
+++ b/Website/backend/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "dev_server": "nodemon ./app.js localhost 3080"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,7 +16,8 @@
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "hbs": "~4.0.4",
-    "http-errors": "~1.6.3",
+    "http-errors": "~2.0.0",
+    "mongodb": "^5.5.0",
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
