--- a/Aplikacija/app/build.gradle
+++ b/Aplikacija/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha05"
     // OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:4.9.1'*/
+    */
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
